[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/kz_debugger/assets/clean.png" type="Texture" id=1]
[ext_resource path="res://addons/kz_debugger/assets/refresh.png" type="Texture" id=2]
[ext_resource path="res://addons/kz_debugger/assets/resize.png" type="Texture" id=3]
[ext_resource path="res://addons/kz_debugger/assets/settings.png" type="Texture" id=4]
[ext_resource path="res://addons/kz_debugger/assets/heart_1_size-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://addons/kz_debugger/scenes/UI/dock/dock.gd" type="Script" id=6]

[node name="WindowDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 89.0
margin_top = 78.0
margin_right = -660.0
margin_bottom = -372.0
rect_min_size = Vector2( 275, 200 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="topBarCol" type="ColorRect" parent="."]
margin_right = 275.0
margin_bottom = 25.0
color = Color( 0.6, 0.6, 0.6, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 275.0
margin_bottom = 25.0
alignment = 2

[node name="sponsor" type="TextureButton" parent="HBoxContainer"]
margin_left = 76.0
margin_right = 100.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 5 )
expand = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 108.0
margin_bottom = 25.0

[node name="refresh" type="TextureButton" parent="HBoxContainer"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 2 )
expand = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 140.0
margin_right = 144.0
margin_bottom = 25.0

[node name="dock" type="TextureButton" parent="HBoxContainer"]
margin_left = 148.0
margin_right = 172.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 25 )
texture_normal = ExtResource( 3 )
expand = true

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_left = 176.0
margin_right = 180.0
margin_bottom = 25.0

[node name="settings" type="TextureButton" parent="HBoxContainer"]
margin_left = 184.0
margin_right = 208.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 25 )
texture_normal = ExtResource( 4 )
expand = true

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer"]
margin_left = 212.0
margin_right = 216.0
margin_bottom = 25.0

[node name="clear" type="TextureButton" parent="HBoxContainer"]
margin_left = 220.0
margin_right = 244.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 25 )
texture_normal = ExtResource( 1 )
expand = true

[node name="VSeparator5" type="VSeparator" parent="HBoxContainer"]
margin_left = 248.0
margin_right = 252.0
margin_bottom = 25.0

[node name="quit" type="Button" parent="HBoxContainer"]
margin_left = 256.0
margin_right = 275.0
margin_bottom = 25.0
text = "x"

[node name="text_bg_color" type="ColorRect" parent="."]
margin_top = 25.0
margin_right = 275.0
margin_bottom = 200.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 25.0
margin_right = 275.0
margin_bottom = 200.0
focus_mode = 2
bbcode_enabled = true
bbcode_text = "[center][color=gray]---- kzCode_ Debugger ----[/color][/center]
"
text = "---- kzCode_ Debugger ----
"
scroll_following = true
selection_enabled = true
override_selected_font_color = true

[connection signal="pressed" from="HBoxContainer/sponsor" to="." method="_on_sponsor_pressed"]
[connection signal="pressed" from="HBoxContainer/refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="HBoxContainer/dock" to="." method="_on_dock_pressed"]
[connection signal="pressed" from="HBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="HBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="meta_clicked" from="RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
